--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^2.2.1",
+    "@capacitor/cli": "^2.2.1",
+    "@capacitor/core": "^2.2.1",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
     "@material-ui/core": "^4.9.5",
